# $Id$

2006-06-25	Konstantin V. Arkhipov

	* main/Containers/: sub-directories for Storable and Unified
	containers introduced.

	* core/Base/Timestamp.class.php: extended support of malformed dates,
	normalization introduced for such cases.

	* core/Form/Primitives/PrimitiveDate.class.php: introduced support of
	dates from Jesus' birthday to 9999-12-31.

	* core/Form/Filters/RemoveSymbolsFilter.class.php: removed in favour
	of StringReplaceFilter.

	* core/Form/PlainForm.class.php: Range-related methods moved to
	PrimitiveRange.

	* core/Form/FormUtils.class.php: backward compatibility with php-5.0
	dropped.

	* core/Form/: sub-directories for Filters and Primitives introduced.

	* core/Form/PlainForm.class.php: backward compatibility with 0.2
	removed.

	* core/Base/Timestamp.class.php: makeNow() and makeToday() added.

	* core/Base/Creatable.class.php,
	core/Base/SingletonInstance.class.php: removed.

2006-06-25	Anton E. Lebedevich

	* main/Utils/TextUtils.class.php: getHostFromUrl() renamed to 
	getRootFromUrl().

2006-06-25	Konstantin V. Arkhipov

	* 0.4.7 released.

2006-06-24	Anton E. Lebedevich
	
	* main/Utils/TextUtils.class.php: getHostFromUrl(), getPathFromUrl(), 
	UrlSafeBase64Encode(), UrlSafeBase64Decode() added.

2006-06-22	Konstantin V. Arkhipov

	* main/DAOs/ObjectQuery.class.php: SQLArray support implemented.

2006-06-17	Konstantin V. Arkhipov

	* main/Flow/EditorController.class.php: uses makeForm() now.

	* meta/builders/ProtoClassBuilder.class.php: getForm() (single global
	Form object) deprecated in
	favor of makeForm() (Form's object factory) as suggested by sloory.

2006-06-11	Konstantin V. Arkhipov

	* main/DAOs/FileSystemDaoWorker.class.php,
	main/DAOs/SmartDaoWorker.class.php,
	main/DAOs/VoodooDaoWorker.class.php: transparent DAO-workers are now
	WatermarkedPeer-friendly.

2006-06-11	Konstantin V. Arkhipov

	* 0.4.6 released.

2006-06-08	Konstantin V. Arkhipov

	* meta/: two minor typo-caused bugs.

2006-05-29	Konstantin V. Arkhipov
